--- a/index.html
+++ b/index.html
@@ -3281,7 +3281,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-    <script src="/js/paint_backup.js"></script>
+    <!-- Legacy runtime disabled: use Vite src build -->
 
     <script type="module" src="/js/modules/main.js"></script>
 
