--- a/index.html
+++ b/index.html
@@ -3355,7 +3355,9 @@
       class="fixed top-32 left-1/2 transform -translate-x-1/2 bg-black bg-opacity-80 text-white px-4 py-2 rounded-lg shadow-xl hidden backdrop-blur-sm z-40"
     >
       <div class="text-sm font-medium text-center">
-        Press <kbd class="px-1 py-0.5 bg-white bg-opacity-20 rounded text-xs">L</kbd> or click lock
+        Press
+        <kbd class="px-1 py-0.5 bg-white bg-opacity-20 border border-white/50 rounded text-xs text-white font-semibold">L</kbd>
+        or click lock
         icon to exit positioning mode
       </div>
     </div>
