--- a/index.html
+++ b/index.html
@@ -3356,7 +3356,7 @@
     >
       <div class="text-sm font-medium text-center">
         Press
-        <kbd class="px-1 py-0.5 bg-white bg-opacity-20 border border-white/50 rounded text-xs text-white font-semibold">L</kbd>
+        <kbd class="px-1 py-0.5 bg-white border border-white/50 rounded text-xs text-black font-semibold">L</kbd>
         or click lock
         icon to exit positioning mode
       </div>
