--- a/index.html
+++ b/index.html
@@ -531,14 +531,15 @@
         border: 1px solid rgba(148, 163, 184, 0.5);
         box-shadow: 0 12px 32px rgba(15, 23, 42, 0.2);
         border-radius: 14px;
-        padding: 8px 10px;
+        padding: 8px 10px 14px;
         min-width: 220px;
         transition: opacity 0.16s ease, transform 0.16s ease;
       }
 
       .rotate-fine-wrap:hover .rotate-fine-panel,
       .rotate-fine-wrap:focus-within .rotate-fine-panel,
-      .rotate-fine-panel:hover {
+      .rotate-fine-panel:hover,
+      body.fine-rotate-active .rotate-fine-panel {
         opacity: 1;
         pointer-events: auto;
         transform: translate(-50%, 0);
@@ -549,8 +550,8 @@
         position: absolute;
         left: -6px;
         right: -6px;
-        top: -22px;
-        height: 26px;
+        bottom: 100%;
+        height: 30px;
       }
 
       .rotate-fine-row {
@@ -569,12 +570,18 @@
 
       #rotateFineSlider {
         appearance: none;
-        height: 6px;
+        height: 32px;
         border-radius: 999px;
-        background: linear-gradient(90deg, #0ea5e9 0%, #6366f1 100%);
+        background: transparent;
         outline: none;
         flex: 1;
         cursor: pointer;
+      }
+
+      #rotateFineSlider::-webkit-slider-runnable-track {
+        height: 6px;
+        border-radius: 999px;
+        background: linear-gradient(90deg, #0ea5e9 0%, #6366f1 100%);
       }
 
       #rotateFineSlider::-webkit-slider-thumb {
@@ -586,6 +593,14 @@
         box-shadow: 0 4px 12px rgba(15, 23, 42, 0.25);
         border: 2px solid #fff;
         cursor: pointer;
+        margin-top: -5px;
+      }
+
+      #rotateFineSlider::-moz-range-track {
+        height: 6px;
+        border-radius: 999px;
+        background: linear-gradient(90deg, #0ea5e9 0%, #6366f1 100%);
+        border: none;
       }
 
       #rotateFineSlider::-moz-range-thumb {
